deploy/blog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: blog
  name: blog
