deploy/blog/service.yaml
# Config blog service
---
apiVersion: v1
kind: Service
metadata:
  name: blogservice
  namespace: blog
spec:
  ports:
    - name: httpport
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: bloginfo
  type: ClusterIP
